# foliage

./: Makefile
docs/: SPEC.md
docs/examples/prop/: conjunction_associative.fol  contrapositive.fol  double_negation.fol  glivenko_excluded_middle.fol  non_contradiction.fol  principle_of_simplification.fol
foliage-model/: dune-project  foliage-model.opam
foliage-model/lib/: checker.ml  dune  lexer.mll  parser.mly  syntax.ml
foliage-model/test/: dune
foliage-view/: .gitignore  index.html  package-lock.json  package.json
foliage-view/src/: App.tsx
foliage-view/src/model/: index.ts
